--- a/docs/developer/plugin-list.asciidoc
+++ b/docs/developer/plugin-list.asciidoc
@@ -587,7 +587,7 @@ activities.
 
 
 |{kib-repo}blob/{branch}/x-pack/plugins/fleet/README.md[fleet]
-|The Fleet plugin allows Elastic Agents to be centrally managed in Kibana.
+|Fleet provides a web-based UI in Kibana for centrally managing Elastic Agents and their policies.
 
 
 |{kib-repo}blob/{branch}/x-pack/plugins/global_search/README.md[globalSearch]
