[Fleet] Update README and local setup dev docs (#184629)
## Summary

Closes https://github.com/elastic/ingest-dev/issues/3354

This is a docs only change.

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>

--- a/docs/developer/plugin-list.asciidoc
+++ b/docs/developer/plugin-list.asciidoc
@@ -587,7 +587,7 @@ activities.
 
 
 |{kib-repo}blob/{branch}/x-pack/plugins/fleet/README.md[fleet]
-|Fleet needs to have Elasticsearch API keys enabled.
+|Fleet provides a web-based UI in Kibana for centrally managing Elastic Agents and their policies.
 
 
 |{kib-repo}blob/{branch}/x-pack/plugins/global_search/README.md[globalSearch]
