--- a/dev_docs/key_concepts/encrypted_saved_objects.mdx
+++ b/dev_docs/key_concepts/encrypted_saved_objects.mdx
@@ -188,7 +188,7 @@ the current and previous version of Kibana. Some of the advice here is applicabl
 
 ## Making Changes
 
-If you will be making changes to your ESOs, or creating new ESOs, the AppEx Platform Servives Security team is available for consultation and assistance. Please reach
+If you will be making changes to your ESOs, or creating new ESOs, the AppEx Platform Services Security team is available for consultation and assistance. Please reach
 out to us on Slack (#kibana-security) with any questions or queries.
 
 We also ask that you please tag us (@elastic/kibana-security) for review on any PRs related to ESOs.
