--- a/docs/dev-tools/console/console.asciidoc
+++ b/docs/dev-tools/console/console.asciidoc
@@ -1,20 +1,17 @@
 [[console-kibana]]
 == Run API requests with Console
 
-Console lets you interact with {es} and {kib} APIs from within {kib}.
+**Console** lets you interact with {es} and {kib} APIs from within {kib}.
 
-It's available on the **Dev Tools** page, that you can access from the navigation menu or the <<kibana-navigation-search,global search field>>.
-
-Interact with the REST APIs of {es} and {kib} with *Console*. With *Console*, you can:
-
-* Send requests and view the responses
-* View API documentation
-* Get your request history
-
-To get started, open the main menu, click *Dev Tools*, then click *Console*.
+To go to **Console**, find **Dev Tools** in the navigation menu or use the <<kibana-navigation-search,global search bar>>.
 
 [role="screenshot"]
 image::dev-tools/console/images/console.png["Console"]
+
+You can also find Console directly on certain Search solution and Elasticsearch serverless project pages, where you can expand it from the footer. This Console has the same capabilities and shares the same history as the Console in **Dev Tools**.
+
+[role="screenshot"]
+image::dev-tools/console/images/persistent-console.png["Console"]
 
 [float]
 [[console-api]]
@@ -52,8 +49,7 @@ Prepend requests to a {kib} API endpoint with `kbn:`
 GET kbn:/api/index_management/indices
 --------------------------------------------------
 
-When you paste the command into *Console*, {kib} automatically converts it
-to *Console* syntax.  Alternatively, if you want to see *Console* syntax in cURL,
+Alternatively, if you want to see *Console* syntax in cURL,
 click the action icon (image:dev-tools/console/images/wrench.png[]) and select *Copy as cURL*.
 Once copied, the username and password will need to be provided
 for the calls to work from external environments.
@@ -190,6 +186,18 @@ when you're debugging an issue or trying query
 combinations in multiple scenarios.
 
 [float]
+[[import-export-console-requests]]
+=== Import and export requests
+
+You can export requests:
+
+* **to a TXT file**, by using the **Export requests** button. When using this method, all content of the input panel is copied, including comments, requests, and payloads. All of the formatting is preserved and allows you to re-import the file later, or to a different environment, using the **Import requests** button. 
++
+TIP: When importing a TXT file containing Console requests, the current content of the input panel is replaced. Export it first if you don't want to lose it, or find it in the **History** tab if you already ran the requests.
+
+* by copying them individually as **curl**, **JavaScript**, or **Python**. To do this, select a request, then open the contextual menu and select **Copy as**. When using this action, requests are copied individually to your clipboard. You can save your favorite language to make the copy action faster the next times you use it.
+
+[float]
 [[console-view-api]]
 === View API docs
 
@@ -230,3 +238,4 @@ If you don’t want to use *Console*, you can disable it by setting `console.ui.
 to `false` in your `kibana.yml` configuration file. Changing this setting
 causes the server to regenerate assets on the next startup,
 which might cause a delay before pages start being served.
+
