--- a/docs/user/ml/index.asciidoc
+++ b/docs/user/ml/index.asciidoc
@@ -34,7 +34,7 @@ File formats supported up to 60 MB:
 * Rich Text (RTF)
 * Open Document Format (ODF)
 
-The *{data-viz}* identifies the file format and field mappings, and you can optionally import the data into an {es} index. To change the default file size limit, see <<kibana-general-settings, fileUpload:maxFileSize in advanced settings>>.
+The *{data-viz}* identifies the file format and field mappings, and you can import the data into an {es} index. To change the default file size limit, see <<kibana-general-settings, `fileUpload:maxFileSize`>> in advanced settings.
 
 If {stack-security-features} are enabled, users must have the necessary
 privileges to use {ml-features}. Refer to
