--- a/docs/user/dashboard/create-dashboards.asciidoc
+++ b/docs/user/dashboard/create-dashboards.asciidoc
@@ -26,22 +26,24 @@ TIP: If you don't have data at hand and still want to explore dashboards, you ca
 
 //To make your dashboard experience as good as possible for you and users who will view it, check the <<dashboard-best-practices,dashboard best practices>>. 
 
-. Open the *Dashboard* page in {kib}.
+. Open the *Dashboards* page in {kib}.
 
 . Select *Create dashboard* to start with an empty dashboard.
 +
 When you create a dashboard, you are automatically in edit mode and can make changes to the dashboard. 
 [[create-panels-with-lens]]
-. Add content to the dashboard. You have several options covered in more details in the <<panels-editors,Visualizations section>>:
+. Add content to the dashboard. You have several options covered in more detail in the <<panels-editors,Visualizations section>>:
 ** <<lens,**Create visualization**>>. This option is a shortcut to create a chart using **Lens**, the default visualization editor in {kib}.
 ** <<panels-editors,**Add panel**>>. Choose one of the available panels to add and configure content to your dashboard.
 ** **Add from library**. Select existing content that has already been configured and saved to the **Visualize Library**.
 ** <<add-controls,**Controls**>>. Add controls to help filter the content of your dashboard.
-
++
+[role="screenshot"]
+image::images/add_content_to_dashboard_8.15.0.png[Options to add content to your dashboard, width=70%]
 . Organize your dashboard by <<arrange-panels,organizing the various panels>>. 
 [[add-dashboard-settings]]
 . Define the main settings of your dashboard from the *Settings* menu located in the toolbar.
-.. Meaningful title, description, and <<managing-tags,tags>> allow you to find the dashboard quickly later when browsing your list of dashboard or using the {kib} search bar.
+.. A meaningful title, description, and <<managing-tags,tags>> allow you to find the dashboard quickly later when browsing your list of dashboards or using the {kib} search bar.
 .. Additional display options allow you unify the look and feel of the dashboard's panels:
 
 *** *Store time with dashboard* &mdash; Saves the specified time filter.
@@ -49,11 +51,14 @@ When you create a dashboard, you are automatically in edit mode and can make cha
 *** *Show panel titles* &mdash; Displays the titles in the panel headers.
 *** *Sync color palettes across panels* &mdash; Applies the same color palette to all panels on the dashboard.
 *** *Sync cursor across panels* &mdash; When you hover your cursor over a time series chart or a heatmap, the cursor on all other related dashboard charts automatically appears.
-*** *Sync tooltips across panels* &mdash; When you hover your cursor over a *Lens* chart, the tooltips on all other related dashboard charts automatically appears.
+*** *Sync tooltips across panels* &mdash; When you hover your cursor over a *Lens* chart, the tooltips on all other related dashboard charts automatically appear.
 
-.. Click *Apply*. 
+.. Click *Apply*.
++
+[role="screenshot"]
+image::images/dashboard_settings_8.15.0.gif[Change and apply dashboard settings, width 30%]
 
-. **Save** Save the dashboard.
+. Click **Save**  to save the dashboard.
 
 [[open-the-dashboard]]
 == Edit a dashboard
